--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Top 5 Best Animated Movies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="maindiv">
+        <br>
         <h1 class="title">Top 5 Best Animated Movies</h1>
+        <br>
         <div class="divcard">
             <h2>Cloudy with a chance of meatballs</h2>
             <span>Year: 2009</span>
